add JDK 17 conf
Signed-off-by: Yuan Zhou <yuan.zhou@intel.com>